--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<style>
+  .custom-table-usuario td a {
+    display: inherit;
+  }
+</style>
+
 <div class="main-content">
   <!-- Botón Agregar reparación -->
   <div class="header-icons">
@@ -24,7 +30,7 @@
     <div id="no-results-message" class="alert alert-info text-center" style="display: none;">
       <i class="bi bi-exclamation-circle me-2"></i> El cliente no existe
     </div>
-    <table class="table table-hover align-middle custom-table">
+    <table class="table table-hover align-middle custom-table custom-table-usuario">
       <thead class="table-header">
         <tr>
           <th>Nombre</th>
