--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -10,7 +10,7 @@ body {
   background-color: white;
   padding: 10px 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-  height: 80px;
+  height: 100px;
   position: relative;
   z-index: 10; 
 }
@@ -19,12 +19,12 @@ body {
   display: flex;
   align-items: center;
   margin-right: 10px;
+  padding-bottom: 10px;
 }
 
 .logo{
   width: 280px;
-  height: 250px;
-  border-radius: 50%;
+  height: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
