--- a/core/static/css/tabla.css
+++ b/core/static/css/tabla.css
@@ -145,7 +145,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 5px;
 }
 
 /* Buscador */
