--- a/core/templates/usuario-productos.html
+++ b/core/templates/usuario-productos.html
@@ -4,8 +4,8 @@
 {% block title %}Servicios de Relojería{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2 class="text-center mb-4">Servicios de Relojería</h2>
+<div class="productos-container mt-5">
+    <h2 class="titulo text-center mb-4">Ventas</h2>
     <div class="row justify-content-center">
         <div class="col-12 d-flex flex-wrap gap-3 justify-content-center">
 
@@ -58,6 +58,20 @@
     .service-card:hover {
         transform: translateY(-5px);
         cursor: pointer;
+    }
+
+    .productos-container {
+        max-width: 900px;
+        margin: 0 auto !important;
+        padding: 20px;
+    }
+
+    .content {
+        display: flex;
+        justify-content: normal;
+        align-items: flex-start;
+        width: 100%;
+        padding: 20px;
     }
 
     .service-icon {
