--- a/core/templates/reparacion/reparacion_list.html
+++ b/core/templates/reparacion/reparacion_list.html
@@ -3,13 +3,32 @@
 
 {% block content %}
 
+<style>
+    .input-group.input-group-reparacion>.form-control.form-control-reparacion {
+        height: auto;
+        border-top-right-radius: 4px !important;
+        border-bottom-right-radius: 4px !important;
+    }
+
+    .input-group.input-group-reparacion>.btn.btn-search {
+        border-radius: 4px !important;
+        /* Asegura espacio entre el input y el botón */
+    }
+
+    .header-icons-reparacion {
+        gap: 0px;
+        justify-content: start;
+    }
+
+</style>
+
 <div class="main-content">
     <!-- Botón Agregar reparación -->
-    <div class="header-icons">
+    <div class="header-icons header-icons-reparacion">
         <a href="{% url 'reparacion_create' %}" class="btn btn-add me-3">Agregar reparación</a>
         <form method="get" action="{% url 'reparacion_list' %}" class="search-form">
-            <div class="input-group" style="gap: 10px;">
-                <input type="text" name="search" class="form-control" placeholder="Buscar reparación"
+            <div class="input-group input-group-reparacion" style="gap: 10px;">
+                <input type="text" name="search" class="form-control form-control-reparacion" placeholder="Buscar reparación"
                     value="{{ request.GET.search }}">
                 <button class="btn btn-search" type="submit">
                     <i class="bi bi-search text-secondary"></i>
