--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="{% static 'css/ventana.css' %}">
   <link rel="stylesheet" href="{% static 'css/reparacion.css' %}">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-  <link rel="stylesheet" href="{% static 'css/password_change.css' %}">
+  <!--<link rel="stylesheet" href="{% static 'css/password_change.css' %}">-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Añadimos solo los estilos necesarios para el botón del avatar -->
