--- a/core/static/css/tabla.css
+++ b/core/static/css/tabla.css
@@ -166,7 +166,7 @@
     font-weight: bold;
 }
 .search-form .btn-search {
-    height: 100%;
+    height: 50px;
     border-left: none;
     background-color: white;
     border: 2px solid #626E15;
